# sphone

./: AUTHORS  CMakeLists.txt  Makefile.am  configure.ac
config/: CMakeLists.txt  sphone.ini
debian/: changelog  control  rules  sphone.xsession
desktop/: CMakeLists.txt  Makefile.am  sphone-dialer.desktop  sphone-dialer.desktop.in  sphone-new-sms.desktop  sphone-new-sms.desktop.in  sphone-options.desktop  sphone-sms-history.desktop
misc/: handset-tweaked.txt  regdata.py  regtool.py
po/: POTFILES.in
src/: CMakeLists.txt  Makefile.am  conf-ini.c  conf-libprofile.c  conf.h  gui-calls-manager.c  gui-contact-view.c  gui-dialer.c  gui-options.c  gui-sms.c  log.c  log.h  main.c  ofono.c  ofono.h  pulse.c  pulse.h  sphone-call.c  sphone-manager.c  sphone-store-tree-model.c  sphone.c  sphone.cpp  utils.c  utils.h
src/comms/: ofono.c  ofono.h
src/gui/: gtk-gui-message-threads.c  gtk-gui-thread-view.c  gtk-gui-thread-view.h  gtk-gui-utils.c  gtk-gui-utils.h  gtk-gui.c  gtk-gui.h  gui-calls-manager.c  gui-calls-manager.h  gui-contact-view.c  gui-contact-view.h  gui-dialer.c  gui-dialer.h  gui-gtk-utils.c  gui-gtk-utils.h  gui-history-calls.c  gui-history-calls.h  gui-options.c  gui-options.h  gui-sms.c  gui-sms.h  keypad.c
src/modapi/: comm.h  datapipe.h  datapipes.h  gui.h  rtconf.h  sphone-conf.h  sphone-log.h  sphone-modules.h  storage.h  types.h
src/modules/: CMakeLists.txt  comm-error-gtk.c  comm-ofono.c  comm-telepathy-maemocallhandler.cpp  comm-telepathy-maemocallhandler.h  comm-telepathy-maemomanager.cpp  comm-telepathy-maemomanager.h  comm-telepathy-maemoprovider.cpp  comm-telepathy-maemoprovider.h  comm-telepathy.cpp  commtest.c  contacts-evolution.c  contacts-ui-abook.c  contacts-ui-exec.c  external-exec.c  glibloop.c  manager.c  notify-libnotify.c  ofono-dbus-names.h  playback-gstreamer.c  qtloop.cpp  route-mapphone-hack.c  route-pulseaudio.c  rtconf-ini.c  rtconf-libprofile.c  sphone-mce.c  store-rtcom.c  test.c  test.cpp  tpqt.cpp
src/modules/gui/: CMakeLists.txt
src/modules/gui/gtk2/: CMakeLists.txt  gtk-gui-message-threads.c  gtk-gui-message-threads.h  gtk-gui-utils.c  gtk-gui-utils.h  keypad.c  keypad.h  ui-calls-manager-gtk.c  ui-dialer-gtk.c  ui-dtmf-gtk.c  ui-history-calls-gtk.c  ui-history-calls-gtk.h  ui-message-recived-gtk.c  ui-message-threads-gtk.c  ui-message-threads-gtk.h  ui-messages-gtk.c  ui-options-gtk.c
src/modules/telepathy/: CMakeLists.txt  comm-telepathy-maemocallhandler.cpp  comm-telepathy-maemocallhandler.h  comm-telepathy-maemomanager.cpp  comm-telepathy-maemomanager.h  comm-telepathy-maemoprovider.cpp  comm-telepathy-maemoprovider.h  comm-telepathy.cpp
src/modules/voicecallmanager/: CMakeLists.txt  comm-voicecallmanager-maemocallhandler.cpp  comm-voicecallmanager-maemocallhandler.h  comm-voicecallmanager-maemomanager.cpp  comm-voicecallmanager-maemomanager.h  comm-voicecallmanager-maemoprovider.cpp  comm-voicecallmanager-maemoprovider.h  comm-voicecallmanager.cpp  comm-voicecallmanager.h
src/utils/: book-import.c  comm.c  conf-ini.c  conf-libprofile.c  datapipe.c  datapipes.c  dbus-marshalers.c  dbus-marshalers.h  gui.c  pulse.c  rtconf.c  sphone-call.c  sphone-conf.c  sphone-log.c  sphone-log.h  sphone-manager.c  sphone-modules.c  sphone-store-tree-model.c  storage.c  store.c  store.h  types.c  utils.c  utils.h
