add_library(ui-dialer-gtk SHARED ui-dialer-gtk.c gtk-gui-utils.c keypad.c)
target_link_libraries(ui-dialer-gtk ${COMMON_LIBRARIES})
target_include_directories(ui-dialer-gtk SYSTEM PRIVATE ${COMMON_INCLUDE_DIRS})
target_include_directories(ui-dialer-gtk PRIVATE ${MODULE_INCLUDE_DIRS})
install(TARGETS ui-dialer-gtk DESTINATION ${SPHONE_MODULE_DIR})

add_library(ui-history-calls-gtk SHARED ui-history-calls-gtk.c gtk-gui-utils.c)
target_link_libraries(ui-history-calls-gtk ${COMMON_LIBRARIES})
target_include_directories(ui-history-calls-gtk SYSTEM PRIVATE ${COMMON_INCLUDE_DIRS})
target_include_directories(ui-history-calls-gtk PRIVATE ${MODULE_INCLUDE_DIRS})
install(TARGETS ui-history-calls-gtk DESTINATION ${SPHONE_MODULE_DIR})

add_library(ui-messages-gtk SHARED ui-messages-gtk.c gtk-gui-utils.c)
target_link_libraries(ui-messages-gtk ${COMMON_LIBRARIES})
target_include_directories(ui-messages-gtk SYSTEM PRIVATE ${COMMON_INCLUDE_DIRS})
target_include_directories(ui-messages-gtk PRIVATE ${MODULE_INCLUDE_DIRS})
install(TARGETS ui-messages-gtk DESTINATION ${SPHONE_MODULE_DIR})

add_library(ui-options-gtk SHARED ui-options-gtk.c)
target_link_libraries(ui-options-gtk ${COMMON_LIBRARIES})
target_include_directories(ui-options-gtk SYSTEM PRIVATE ${COMMON_INCLUDE_DIRS})
target_include_directories(ui-options-gtk PRIVATE ${MODULE_INCLUDE_DIRS})
install(TARGETS ui-options-gtk DESTINATION ${SPHONE_MODULE_DIR})

add_library(ui-calls-manager-gtk SHARED ui-calls-manager-gtk.c)
target_link_libraries(ui-calls-manager-gtk ${COMMON_LIBRARIES})
target_include_directories(ui-calls-manager-gtk SYSTEM PRIVATE ${COMMON_INCLUDE_DIRS})
target_include_directories(ui-calls-manager-gtk PRIVATE ${MODULE_INCLUDE_DIRS})
install(TARGETS ui-calls-manager-gtk DESTINATION ${SPHONE_MODULE_DIR})

add_library(ui-message-threads-gtk SHARED ui-message-threads-gtk.c gtk-gui-message-threads.c)
target_link_libraries(ui-message-threads-gtk ${COMMON_LIBRARIES})
target_include_directories(ui-message-threads-gtk SYSTEM PRIVATE ${COMMON_INCLUDE_DIRS})
target_include_directories(ui-message-threads-gtk PRIVATE ${MODULE_INCLUDE_DIRS})
install(TARGETS ui-message-threads-gtk DESTINATION ${SPHONE_MODULE_DIR})

add_library(ui-message-recived-gtk SHARED ui-message-recived-gtk.c)
target_link_libraries(ui-message-recived-gtk ${COMMON_LIBRARIES})
target_include_directories(ui-message-recived-gtk SYSTEM PRIVATE ${COMMON_INCLUDE_DIRS})
target_include_directories(ui-message-recived-gtk PRIVATE ${MODULE_INCLUDE_DIRS})
install(TARGETS ui-message-recived-gtk DESTINATION ${SPHONE_MODULE_DIR})
